--- a/style.css
+++ b/style.css
@@ -9,3 +9,57 @@ body {
 h1 {
 	text-align: center;
 }
+
+h2 {
+	margin-top: 0;
+}
+
+.tym {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.osoba {
+	border: 1.5px solid lightgrey;
+	margin: 10px;
+	border-radius: 2%;
+	box-shadow: 0px 0.5px 1px aquamarine;
+}
+
+.foto img {
+	border-radius: 50%;
+	margin: 20px 20px 0 20px;
+	}
+
+.foto {
+	text-align: center;
+}
+
+.popis {
+	text-align: center;
+	margin: 20px;
+	}
+
+
+@media (min-width: 667px) and (max-width: 992px) {
+	.osoba {
+	display: flex;
+	width: calc((100% - 40px)/2);
+	}
+
+	.foto img {
+		margin-right: 10px;
+	}
+
+	.popis {
+		text-align: left;
+	}
+
+}
+
+@media (min-width: 993px) {
+	.tym {
+		flex-wrap: nowrap;
+	}
+}
